Replace non-exposed fest-reflect usages with vanilla java reflection
add Chris to .pairs