@@ -1,21 +1,12 @@
 package org.robolectric.internal;
 
 import android.app.Application;
-import android.app.Instrumentation;
 import android.content.Context;
 import android.content.pm.ApplicationInfo;
 import android.content.pm.PackageManager;
 import android.content.res.Configuration;
 import android.content.res.Resources;
-
-import java.lang.reflect.Method;
-
-import org.robolectric.AndroidManifest;
-import org.robolectric.RoboInstrumentation;
-import org.robolectric.Robolectric;
-import org.robolectric.RobolectricTestRunner;
-import org.robolectric.SdkConfig;
-import org.robolectric.TestLifecycle;
+import org.robolectric.*;
 import org.robolectric.annotation.Config;
 import org.robolectric.res.ResBunch;
 import org.robolectric.res.ResourceLoader;
@@ -25,7 +16,10 @@ import org.robolectric.shadows.ShadowContextImpl;
 import org.robolectric.shadows.ShadowLog;
 import org.robolectric.shadows.ShadowResources;
 
-import static org.fest.reflect.core.Reflection.*;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+
 import static org.robolectric.Robolectric.shadowOf;
 
 public class ParallelUniverse implements ParallelUniverseInterface {
@@ -48,7 +42,7 @@ public class ParallelUniverse implements ParallelUniverseInterface {
       loggingInitialized = true;
     }
   }
-  
+
   /*
    * If the Config already has a version qualifier, do nothing. Otherwise, add a version
    * qualifier for the target api level (which comes from the manifest or Config.emulateSdk()).
@@ -64,7 +58,8 @@ public class ParallelUniverse implements ParallelUniverseInterface {
     return qualifiers;
   }
 
-  @Override public void setUpApplicationState(Method method, TestLifecycle testLifecycle, boolean strictI18n, ResourceLoader systemResourceLoader, AndroidManifest appManifest, Config config) {
+  @Override
+  public void setUpApplicationState(Method method, TestLifecycle testLifecycle, boolean strictI18n, ResourceLoader systemResourceLoader, AndroidManifest appManifest, Config config) {
     Robolectric.application = null;
     Robolectric.packageManager = new RobolectricPackageManager();
     Robolectric.packageManager.addPackage(DEFAULT_PACKAGE_NAME);
@@ -84,34 +79,62 @@ public class ParallelUniverse implements ParallelUniverseInterface {
     systemResources.updateConfiguration(configuration, systemResources.getDisplayMetrics());
     shadowOf(systemResources.getAssets()).setQualifiers(qualifiers);
 
-    Class<?> contextImplClass = type(ShadowContextImpl.CLASS_NAME)
-        .withClassLoader(getClass().getClassLoader())
-        .load();
+    Class<?> contextImplClass;
+    try {
+      contextImplClass = getClass().getClassLoader().loadClass(ShadowContextImpl.CLASS_NAME);
+    } catch (ClassNotFoundException e) {
+      throw new RuntimeException(e);
+    }
 
-    Class<?> activityThreadClass = type(ShadowActivityThread.CLASS_NAME)
-        .withClassLoader(getClass().getClassLoader())
-        .load();
-
-    Object activityThread = constructor()
-        .in(activityThreadClass)
-        .newInstance();
+    Class<?> activityThreadClass;
+    Object activityThread;
+    try {
+      activityThreadClass = getClass().getClassLoader().loadClass(ShadowActivityThread.CLASS_NAME);
+      activityThread = activityThreadClass.getConstructor().newInstance();
+    } catch (ClassNotFoundException e) {
+      throw new RuntimeException(e);
+    } catch (InvocationTargetException e) {
+      throw new RuntimeException(e);
+    } catch (NoSuchMethodException e) {
+      throw new RuntimeException(e);
+    } catch (InstantiationException e) {
+      throw new RuntimeException(e);
+    } catch (IllegalAccessException e) {
+      throw new RuntimeException(e);
+    }
     Robolectric.activityThread = activityThread;
 
-    field("mInstrumentation")
-        .ofType(Instrumentation.class)
-        .in(activityThread)
-        .set(new RoboInstrumentation());
+    try {
+      Field mInstrumentation = activityThread.getClass().getDeclaredField("mInstrumentation");
+      mInstrumentation.setAccessible(true);
+      mInstrumentation.set(activityThread, new RoboInstrumentation());
+    } catch (NoSuchFieldException e) {
+      throw new RuntimeException(e);
+    } catch (IllegalAccessException e) {
+      throw new RuntimeException(e);
+    }
 
-    field("mCompatConfiguration")
-        .ofType(Configuration.class)
-        .in(activityThread)
-        .set(configuration);
+    try {
+      Field mCompatConfiguration = activityThread.getClass().getDeclaredField("mCompatConfiguration");
+      mCompatConfiguration.setAccessible(true);
+      mCompatConfiguration.set(activityThread, configuration);
+    } catch (NoSuchFieldException e) {
+      throw new RuntimeException(e);
+    } catch (IllegalAccessException e) {
+      throw new RuntimeException(e);
+    }
 
-    Context systemContextImpl = (Context) method("createSystemContext")
-        .withReturnType(contextImplClass)
-        .withParameterTypes(activityThreadClass)
-        .in(contextImplClass)
-        .invoke(activityThread);
+    Context systemContextImpl;
+    try {
+      Method createSystemContext = contextImplClass.getMethod("createSystemContext", activityThreadClass);
+      systemContextImpl = (Context) createSystemContext.invoke(null, activityThread);
+    } catch (NoSuchMethodException e) {
+      throw new RuntimeException(e);
+    } catch (InvocationTargetException e) {
+      throw new RuntimeException(e);
+    } catch (IllegalAccessException e) {
+      throw new RuntimeException(e);
+    }
 
     final Application application = (Application) testLifecycle.createApplication(method, appManifest, config);
     if (application != null) {
@@ -125,11 +148,24 @@ public class ParallelUniverse implements ParallelUniverseInterface {
         throw new RuntimeException(e);
       }
 
-      Class<?> compatibilityInfoClass = type("android.content.res.CompatibilityInfo").load();
-      Object loadedApk = method("getPackageInfo")
-          .withParameterTypes(ApplicationInfo.class, compatibilityInfoClass, ClassLoader.class, boolean.class, boolean.class)
-          .in(activityThread)
-          .invoke(applicationInfo, null, getClass().getClassLoader(), false, true);
+      Class<?> compatibilityInfoClass;
+      try {
+        compatibilityInfoClass = getClass().getClassLoader().loadClass("android.content.res.CompatibilityInfo");
+      } catch (ClassNotFoundException e) {
+        throw new RuntimeException(e);
+      }
+
+      Object loadedApk;
+      try {
+        Method getPackageInfo = activityThread.getClass().getMethod("getPackageInfo", ApplicationInfo.class, compatibilityInfoClass, ClassLoader.class, boolean.class, boolean.class);
+        loadedApk = getPackageInfo.invoke(activityThread, applicationInfo, null, getClass().getClassLoader(), false, true);
+      } catch (NoSuchMethodException e) {
+        throw new RuntimeException(e);
+      } catch (InvocationTargetException e) {
+        throw new RuntimeException(e);
+      } catch (IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
 
       shadowOf(application).bind(appManifest, resourceLoader);
       if (appManifest == null) {
@@ -137,23 +173,48 @@ public class ParallelUniverse implements ParallelUniverseInterface {
         shadowOf(application).setPackageName(applicationInfo.packageName);
       }
       Resources appResources = application.getResources();
-      field("mResources").ofType(Resources.class).in(loadedApk).set(appResources);
+      try {
+        Field mResources = loadedApk.getClass().getDeclaredField("mResources");
+        mResources.setAccessible(true);
+        mResources.set(loadedApk, appResources);
+      } catch (NoSuchFieldException e) {
+        throw new RuntimeException(e);
+      } catch (IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
 
-      Context contextImpl = method("createPackageContext")
-          .withReturnType(Context.class)
-          .withParameterTypes(String.class, int.class) // packageName, flags
-          .in(systemContextImpl)
-          .invoke(applicationInfo.packageName, Context.CONTEXT_INCLUDE_CODE);
+      Context contextImpl;
+      try {
+        Method createPackageContext = systemContextImpl.getClass().getMethod("createPackageContext", String.class, int.class);
+        contextImpl = (Context) createPackageContext.invoke(systemContextImpl, applicationInfo.packageName, Context.CONTEXT_INCLUDE_CODE);
+      } catch (NoSuchMethodException e) {
+        throw new RuntimeException(e);
+      } catch (InvocationTargetException e) {
+        throw new RuntimeException(e);
+      } catch (IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
 
-      field("mInitialApplication")
-          .ofType(Application.class)
-          .in(activityThread)
-          .set(application);
+      try {
+        Field mInitialApplication = activityThread.getClass().getDeclaredField("mInitialApplication");
+        mInitialApplication.setAccessible(true);
+        mInitialApplication.set(activityThread, application);
+      } catch (NoSuchFieldException e) {
+        throw new RuntimeException(e);
+      } catch (IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
 
-      method("attach")
-          .withParameterTypes(Context.class)
-          .in(application)
-          .invoke(contextImpl);
+      try {
+        Method attach = application.getClass().getMethod("attach", Context.class);
+        attach.invoke(application, contextImpl);
+      } catch (NoSuchMethodException e) {
+        throw new RuntimeException(e);
+      } catch (InvocationTargetException e) {
+        throw new RuntimeException(e);
+      } catch (IllegalAccessException e) {
+        throw new RuntimeException(e);
+      }
 
       appResources.updateConfiguration(configuration, appResources.getDisplayMetrics());
       shadowOf(appResources.getAssets()).setQualifiers(qualifiers);
@@ -164,13 +225,15 @@ public class ParallelUniverse implements ParallelUniverseInterface {
     }
   }
 
-  @Override public void tearDownApplication() {
+  @Override
+  public void tearDownApplication() {
     if (Robolectric.application != null) {
       Robolectric.application.onTerminate();
     }
   }
 
-  @Override public Object getCurrentApplication() {
+  @Override
+  public Object getCurrentApplication() {
     return Robolectric.application;
   }
 
